manifests/wls-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: weblogic-domain-ns
spec:
  ingressClassName: nginx
  rules:
    - host: "web.weblogic-demo.apps.kube.nblrnd.biz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weblogic-demo-cluster-cluster-1
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-admin
  namespace: weblogic-domain-ns
spec:
  ingressClassName: nginx
  rules:
    - host: "admin.weblogic-demo.apps.kube.nblrnd.biz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weblogic-demo-admin-server
                port:
                  number: 7001
